# msckf_vio

./: CMakeLists.txt
cmake/: FindSuiteSparse.cmake
config/: camchain-imucam-100t20-equi.yaml  camchain-imucam-100t20-radtan.yaml  camchain-imucam-100t5-remap.yaml  camchain-imucam-100t5.yaml  camchain-imucam-100t6.yaml  camchain-imucam-100t7.yaml  camchain-imucam-50t3.yaml  camchain-imucam-zed.yaml
include/msckf_vio/: image_processor.h  msckf_vio.h
launch/: image_processor_100t14-160.launch  image_processor_100t14.launch  image_processor_100t20-2imu.launch  image_processor_100t20-equi.launch  image_processor_100t20-radtan.launch  image_processor_100t20-radtan.launch~  image_processor_100t5.launch  image_processor_100t5_remap.launch  image_processor_100t6.launch  image_processor_100t7.launch  image_processor_50t3.launch  image_processor_euroc.launch  msckf_vio_100t14-160-1.launch  msckf_vio_100t14-160-2.launch  msckf_vio_100t14-160-params.launch  msckf_vio_100t14-160.launch  msckf_vio_100t14-2imu.launch  msckf_vio_100t14-9250.launch  msckf_vio_100t14.launch  msckf_vio_100t20-BMI160.launch  msckf_vio_100t20-MPU9250.launch  msckf_vio_100t20-equi.launch  msckf_vio_100t20-radtan.launch  msckf_vio_100t5.launch  msckf_vio_100t5_remap.launch  msckf_vio_100t6.launch  msckf_vio_100t7.launch  msckf_vio_50t3.launch  msckf_vio_euroc.launch  msckf_vio_zed.launch
rviz/: rviz_2imu.rviz  rviz_50t_config.rviz  rviz_euroc_config.rviz  rviz_param.rviz
src/: image_processor.cpp  msckf_vio.cpp
